# creobridge

./: README.md
anchor/: .dockerignore  Anchor.toml  Dockerfile  README.md  package.json
anchor/programs/bridge-solana/: Cargo.toml
anchor/programs/bridge-solana/src/: lib.rs
anchor/tests/: bridge-solana.ts
contracts/: .env.example  .gitignore  .gitlab-ci.yml  .solhint.json  README.md  __project__.json  config.json  env.d.ts  gotbit.config.ts  hardhat.config.ts  package.json  tsconfig.json
contracts/contracts/: BridgeAssist.sol  CreoEngine.sol
contracts/contracts/mock/: Token.sol
contracts/deploy/localhost/: 01_Token.deploy.ts  02_BridgeAssist.deploy.ts  03_Token.setup.ts  04_BridgeAssist.setup.ts  05_CreoEngine.deploy.ts
contracts/deploy/mainnet/: 01_BridgeAssist.deploy.ts  01_Token.deploy.ts  02_BridgeAssist.deploy.ts  03_Token.setup.ts  04_BridgeAssist.setup.ts
contracts/deploy/testnet/: 01_Token.deploy.ts  02_BridgeAssist.deploy.ts  03_Token.setup.ts
contracts/deployments/bsc_mainnet/: Token.json
contracts/gotbit-tools/hardhat/: config.ts  index.ts  rpc.ts
contracts/gotbit-tools/hardhat/utils/: index.ts  misc.ts  node.ts
contracts/scripts/fork/: deploy_all_forks.ts  init_forks.ts
contracts/scripts/init_testnet/: deploy_all.ts  verify.ts
contracts/test/: BridgeAssist.test.ts  CreoEngine.test.ts  index.ts
contracts/typechain/: BridgeAssist.d.ts  CreoEngine.d.ts  Token.d.ts  index.ts
contracts/typechain/factories/: BridgeAssist__factory.ts  CreoEngine__factory.ts  ERC20__factory.ts  Token__factory.ts
(+2 files in other folders)
