[package]
name = "bridge-solana"
version = "0.1.0"
description = "A Solana program for a private bridge."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
bytemuck = "1.13.1"
